# cowars

./: CMakeLists.txt  README.md
include/net/: client.h  msg.h  server.h
include/util/: errors.h  log.h  util.h
src/: main.c
src/net/: client.c  common.c  common.h  msg.c  server.c
